# Developing_tool_notes

./: .gitignore  Conda.md  Docker.md  Git.md  README.md
docker_images/cudagl_vnc/: Dockerfile  build.sh  docker-compose.yaml  start.sh
docker_images/habitat_ros/: Dockerfile  build_docker.sh  run_container.sh
docker_images/joey_ssc/: run_container.sh
docker_images/noetic_vnc/: Dockerfile  build.sh  docker-compose.yaml  start.sh
docker_images/sg_vln/: Dockerfile  build.sh
docker_images/sg_vln_0.2.5/: .zsh_history  docker-compose.yaml  start.sh
docker_images/sg_vln_0.3.3/: .zsh_history  build.sh  docker-compose.yaml  start.sh
docker_images/tiamat/: run_container.sh
docker_images/ubuntu20_gl/: Dockerfile  build_docker.sh  run_container.sh  start-vnc.sh
docker_images/ubuntu20_noetic_novnc/: Dockerfile  build.sh  docker-compose.yaml  start.sh  start_vnc.sh
docker_images/ubuntu24_hydra_vnc/: Dockerfile  build.sh  docker-compose.yaml  start.sh  xstartup
docker_images/ubuntu_20_cuda11.6.1/: Dockerfile  run_container.sh
docker_images/ubuntu_22.04_cuda11.7.1_gs/: Dockerfile  run_container.sh
docker_images/ubuntu_22_habitat_bridge/: Dockerfile
new_machine_setup/: auto_setup_script.md  setup.sh
python_learn/: DepthCamera_2025-05-11-12-46-12.json  multiprocess.ipynb  multiprocess.py  socket_client.py  test.py  visualize_habitat_pcd.py
python_learn/multy_package/: bla.py  pyproject.toml
python_learn/multy_package/multy_package/subpackage_A/: __init__.py  example_a.py
python_learn/multy_package/multy_package/subpackage_B/: example_b.py
(+6 files in other folders)
